--- a/Lab3Dist/Lab3Dist.csproj
+++ b/Lab3Dist/Lab3Dist.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="Library.cs" />
     <Compile Include="Program1.cs" />
+    <Compile Include="Program2.cs" />
+    <Compile Include="Program3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
